2013-01-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the start of the LHA Fortran wrapper, based on the Py8
	wrapper by Steve and Martin.

2013-01-10  Andy Buckley  <andy.buckley@cern.ch>

	* More PDFGrid data loading development: improvements to the API
	and the data parser now works.

	* Adding the error extrapolator to the extrapolator factory function.

2013-01-09  Andy Buckley  <andy.buckley@cern.ch>

	* A few tweaks to the info/data loader system: PDF loading from
	set name + member ID with cascading info/set/config levels WORKS!

	* Adding more constructors for PDFGrid, calling the new ones on
	PDF to populate the Info class.

	* Adding the EXAMPLEPDF directory for testing.

2013-01-08  Andy Buckley  <andy.buckley@cern.ch>

	* Adding example lhapdf.conf.

	* Inlining, clean-up and other tweaks.

	* Adding PDF base constructors with loading apparatus for info
	from member files + discovery and loading of set-level info.

2013-01-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding to_str variants for both single objects and for vectors
	of objects which are convertible to string via lexical_cast.

	* Adding the YAML parser operation to the Info class (and its subclasses).

	* Removing Types.h in favour of split Utils.h and Exceptions.h

	* include/LHAPDF/Paths.h: Adding path searching machinery (using Boost.Filesystem).

2013-01-02  Andy Buckley  <andy.buckley@cern.ch>

	* Adding some of the necessary infrastructure for subgrids, and
	rewriting the grid format parser to handle separated subgrid
	blocks. Boost.MultiArray being used for the internal storage in
	place of the dynamically allocated C arrays. Metadata methods are
	currently disabled for porting to the cascading Info system.

2013-01-01  Andy Buckley  <andy.buckley@cern.ch>

	* Major restructuring of the API: lots of subtle problems with the
	first attempt, and room for improvement. Painful, but worth the
	reworking to get it right. Lots left to do... see the TODO and